# SVG_PROJECT

./: .gitignore  .sconsign.dblite  CMakeLists.txt  README.md  Sconstruct.py  main  main.cpp
Files/: File.cpp  File.h  ShapeFile.cpp  ShapeFile.h
Helpers/: .sconsign.dblite  Points.cpp  Points.h  String.cpp  String.h
Shapes/: Circle.cpp  Circle.h  Container.cpp  Container.h  Line.cpp  Line.h  Polygon.cpp  Polygon.h  Rectangle.cpp  Rectangle.h  Shape.cpp  Shape.h
String/: String.cpp  String.h
